# RedClow

./: .env  .env.example  HELP.md  QUICKSTART.md  kaggle_phi4.py  kaggle_v2.py  pyproject.toml  readme.md  redclaw.py  requirements.txt  work.md
config/: .env.example
scripts/: deploy_kali.sh
src/redclaw/: __init__.py  __main__.py
src/redclaw/agents/: __init__.py  autonomous_agent.py  base.py  exploit_agent.py  exploitation_agent.py  post_exploitation_agent.py  postexploit_agent.py  recon_agent.py  reporting_agent.py  scanning_agent.py
src/redclaw/ai_redteam/: __init__.py  autoredteamer.py  curiosity_agent.py  harm_framework.py  pyrit_client.py
src/redclaw/cli/: __init__.py  app.py  main.py
src/redclaw/core/: __init__.py  config.py  llm_client.py  llm_manager.py  memory.py  orchestrator.py  rag.py  state_machine.py
src/redclaw/engines/: __init__.py  caldera_client.py  hexstrike_client.py  metasploit_client.py
src/redclaw/integrations/: __init__.py  database.py  hexstrike.py  mcp_bridge.py
src/redclaw/tools/: __init__.py  executor.py
tests/: __init__.py  integration_proof.py  test_imports.py  test_suite.py
