[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redclaw"
version = "2.0.0"
description = "RedClaw - Advanced Autonomous Red Team AI Agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SparkStack Systems", email = "contact@sparkstack.io"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
keywords = [
    "security",
    "penetration-testing",
    "red-team",
    "ai",
    "llm",
    "automation"
]

dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "msgpack>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
full = [
    "neo4j>=5.0.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/sparkstack/redclaw"
Documentation = "https://github.com/sparkstack/redclaw#readme"
Repository = "https://github.com/sparkstack/redclaw.git"

[project.scripts]
redclaw = "redclaw.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redclaw = ["py.typed", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
